--- a/frontend/src/css/share-link-dialog.css
+++ b/frontend/src/css/share-link-dialog.css
@@ -18,17 +18,16 @@
 }
 @media (min-width: 768px) {
   .share-dialog-content .share-dialog-side {
-    padding: 1rem 0 0 1rem;
     border: 0;
     border-right: 1px solid #eee;
   }
   .share-dialog-side .nav {
     flex-direction: column;
   }
-}
-
-.share-dialog-side .nav-pills .nav-item .nav-link {
+  .share-dialog-side .nav-pills .nav-item .nav-link {
     width: 100%;
+    margin: 0;
+  }
 }
 
 .share-dialog-content .share-dialog-main {
@@ -86,7 +85,7 @@
 }
 
 .share-dialog .nav .nav-item .nav-link {
-    padding: 0.3125rem 1rem 0.3125rem 0.25rem;
+    padding: 0.3125rem 0.25rem;
 }
 
 input.expire-input {
