[misc] UI: modified markdown side panels, comment panels, input/textarea placeholder

--- a/frontend/src/css/participants-list.css
+++ b/frontend/src/css/participants-list.css
@@ -14,7 +14,7 @@
 }
 .participants .add-participants i {
   font-size: 16px;
-  color: rgb(229, 162, 82);
+  color: #ff9800;
   border: 2px solid #fff;
   border-radius: 50%;
 }
