--- a/frontend/src/css/user-settings.css
+++ b/frontend/src/css/user-settings.css
@@ -42,14 +42,15 @@ body {
   overflow: auto;
 }
 .setting-item {
+  font-size: 0.875rem;
   margin: 1em 0 3em;
 }
 .setting-item-heading {
-  font-size: 1rem;
+  font-size: 0.9375rem;
   font-weight: normal;
-  padding-bottom: 0.2em;
+  padding-bottom: 0.3rem;
   border-bottom: 1px solid #ddd;
-  margin-bottom: 0.7em;
+  margin-bottom: 0.7rem;
 }
 .user-avatar {
   border-radius: 3px;
