--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -112,8 +112,11 @@ ul,ol,li {
 dl { margin:1.5em 0; }
 dt { color:#666; margin:24px 0 2px; font-weight:normal; }
 dd { margin-bottom:.8em; color:#222; }
-a { color:#eb8205; }
-a:hover { color:#eb8205; }
+input::placeholder,
+textarea::placeholder {
+    color: #999;
+}
+a, a:hover { color: #ec8000; }
 .vam { vertical-align:middle; }
 .flex-auto { flex:auto; }
 .flex-1 { flex:1; }
@@ -131,7 +134,7 @@ a:hover { color:#eb8205; }
     text-overflow:ellipsis;
 }
 .op-target {
-    color: #ee8204;
+    color: #ec8000;
     word-wrap: break-word;
 }
 .left-zero {
@@ -340,14 +343,13 @@ a:hover { color:#eb8205; }
 }
 
 .op-icon {
-    color: #f19645;
+    color: #ff9800;
 }
 
 .op-icon:focus,
 .op-icon:hover {
-    padding-bottom: 0.125rem;
-    border-bottom: 0.125rem solid #e0873b;
-    color: #e0873b;
+    color: #d98100;
+    text-decoration: none;
 }
 
 .action-icon,
@@ -384,8 +386,12 @@ a:hover { color:#eb8205; }
 
 #my-info {
     display:inline-block;
-    color:#d6d6d6;
+    color: #bdbdbd;
     cursor:pointer;
+}
+
+#my-info:hover {
+    color: #9e9e9e;
 }
 
 #account .avatar {
@@ -536,11 +542,11 @@ a:hover { color:#eb8205; }
 }
 
 .nav-pills .nav-item .nav-link:hover {
-    background-color: #feefb8;
+    background-color: #ffecd1;
 }
 
 .nav-pills .nav-item .nav-link.active {
-    background-color: #feac74;
+    background-color: #ff9800;
     color: #fff;
     border: none;
 }
@@ -585,11 +591,11 @@ a:hover { color:#eb8205; }
     margin: 24px 12px;
     color: #FFFFFF;
     border-radius: 0.25rem;
-    background-color: #FEAC74;
+    background-color: #ff9800;
 }
 
 .side-nav-link:hover {
-    background-color: #F3985A;
+    background-color: #d98100;
     cursor: pointer;
 }
 
@@ -640,10 +646,15 @@ a:hover { color:#eb8205; }
 
 .side-nav-con .nav .nav-item,
 .side-nav-con .nav .nav-item .nav-link {
-    display: block;
     padding-left: 0;
     margin-right: 0;
+    width: 100%;
 }
+
+.side-nav-con .nav .nav-item .nav-link {
+    height: 36px;
+}
+
 .side-nav-con .active .sharp,
 .side-nav-con .active .nav-text {
     font-weight: bold;
@@ -676,44 +687,35 @@ a:hover { color:#eb8205; }
 }
 
 .side-nav-con .toggle-icon {
-    margin-right: 0.25rem;
-    height: 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color:#999;
+    color: #999;
+    margin-left: auto;
 }
 
-.side-nav-con .draft-info {
-    position: relative;
-    line-height: 1.5rem;
-}
-
-.side-nav-con .draft-info .badge {
-    position: relative;
-    float:right;
-    margin-top: 0.2rem;
-    background-color: #EDEDEE;
+#draft-num {
+    font-size: 75%;
     color: #5B5F65;
+    background-color: #EDEDEE;
     display: flex;
     align-items: center;
-    border-radius:50%;
     justify-content: center;
+    border-radius:50%;
     min-width: 1.3rem;
     min-height: 1.3rem;
-    padding: 0 .3rem;
+    padding: 0 2px;
+    margin-left: auto;
 }
 
 .side-nav-con .sub-nav {
-    display: block;
     overflow: hidden;
+    width: 100%;
 }
 
-.side-nav-con .sub-nav .nav-link {
+.side-nav-con .sub-nav .nav-item .nav-link {
     padding: 0;
     display: block;
     font-size: 0.875rem;
     line-height: 1.5rem;
+    height: auto;
 }
 
 .side-panel-slide {
@@ -729,17 +731,9 @@ a:hover { color:#eb8205; }
     position:relative;
     width: 32px;
 }
-#notifications .no-deco {
+#notice-icon {
     position: relative;
     display: block;
-    width: 100%;
-    height: 100%;
-}
-#notifications .sf2-icon-bell {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
 }
 @media (max-width: 390px) {
     #notifications {
@@ -765,17 +759,21 @@ a:hover { color:#eb8205; }
     font-size:24px;
     line-height:1;
     color:#999;
+    vertical-align: middle;
 }
 #notifications .num {
-    position:absolute;
-    color:#fff;
-    font-size:12px;
-    line-height:1;
-    padding:1px 2px;
-    background:#feac74;
-    border:1px solid #cb8a5d;
-    top:0;
-    left:15px;
+    position: absolute;
+    top: -3px;
+    left: 12px;
+    padding: 0 2px;
+    min-width: 16px;
+    height: 16px;
+    color: #fff;
+    font-size: 9px;
+    line-height: 16px;
+    text-align: center;
+    background: #fc6440;
+    border-radius: 100%;
 }
 #notice-popover {
     top:38px;
@@ -1055,6 +1053,9 @@ a.table-sort-op:hover {
 }
 
 /* dropdown-menu style */
+.dropdown {
+  vertical-align: middle;
+}
 .dropdown-menu {
     min-width: 8rem;
 }
