--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -542,7 +542,7 @@ a, a:hover { color: #ec8000; }
 }
 
 .nav-pills .nav-item .nav-link:hover {
-    background-color: #ffecd1;
+    background-color: #f5f5f5;
 }
 
 .nav-pills .nav-item .nav-link.active {
