--- a/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
+++ b/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
@@ -51,6 +51,6 @@
 <p>{% blocktrans %}The "SeaDrive" shortcut in Windows Explorer won't disappear after you exit SeaDrive progrme or switch Seafile accounts in SeaDrive. This is an intended behavior. You don't need to remove them if you still need to access the account later.{% endblocktrans %}</p>
 <p>{% blocktrans %}In some corner cases, the "SeaDrvie" shortcut will be left-over in Windows Explorer and you want to remove it.{% endblocktrans %}</p>
 <p>{% blocktrans %}You can usually remove those shortcuts by uninstalling SeaDrive program and choose "Remove account information" in the promt dialog.{% endblocktrans %}</p>
-<p>{% blocktrans %}If uninstallation doesn't remove the shortcuts successfully, you can remove the SeaDrive shortcut in Windows Explorer by editing the registry. Open the path "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Desktop\\NameSpace\\" in registry editor. Remove the sub-keys correspond to the shortcut you want to remove.{% endblocktrans %}</p>
+<p>{% blocktrans %}If uninstallation doesn't remove the shortcuts successfully, you can remove the SeaDrive shortcut in Windows Explorer by editing the registry. Open the path "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Desktop\NameSpace\" in registry editor. Remove the sub-keys correspond to the shortcut you want to remove.{% endblocktrans %}</p>
 
 {% endblock %}
