[help] manage_library_as_wiki: removed outdated content(about functions no longer exist)

--- a/seahub/help/templates/help/manage_library_as_wiki.html
+++ b/seahub/help/templates/help/manage_library_as_wiki.html
@@ -14,7 +14,7 @@
 <img src="{{ MEDIA_URL }}img/help/markdown_editor.png" alt="Markdown Editor" />
 <p>{% blocktrans %}The change history of a Markdown file can be easily accessed by clicking the "File History" button in the menu on top of the editor interface.{% endblocktrans %}</p>
 <img src="{{ MEDIA_URL }}img/help/file_history.png" alt="File history" />
-<p>{% trans "You can open a hidden side bar on the right side of the Markdown editor. Table of contents, file information, formatting suggestions, and collaborative commenting are provided in this side bar." %}</p>
+<p>{% trans "You can open a hidden side bar on the right side of the Markdown editor. Table of contents, file information, and collaborative commenting are provided in this side bar." %}</p>
 <img src="{{ MEDIA_URL }}img/help/editor_side_bar.png" alt="Markdown Editor Side Bar" />
 <h4 id="file-tagging-and-related-documents">{% trans "File tagging and related documents" %}</h4>
 <p>{% trans "File tagging is an important feature for knowledge management. Seafile allows users to define tags for each library and apply tags to files. Tags can be managed from the side bar of the Markdown editor, or from the file browser interface." %}</p>
@@ -22,6 +22,4 @@
 <img src="{{ MEDIA_URL }}img/help/tags_from_file_browser.png" alt="Tags from file browser" />
 <p>{% trans "The file browser interface provides a summary of all file tags in the current library." %}</p>
 <img src="{{ MEDIA_URL }}img/help/tags_summary.png" alt="Tags summary" />
-<p>{% blocktrans %}You can also add related files to a Markdown document from the "File Information" tab in the side bar.{% endblocktrans %}</p>
-<img src="{{ MEDIA_URL }}img/help/related_files.png" alt="Related files" />
 {% endblock %}
