--- a/seahub/help/templates/help/encrypted_libraries.html
+++ b/seahub/help/templates/help/encrypted_libraries.html
@@ -9,7 +9,7 @@
 
 <p>{% trans "When creating an encrypted library:" %}
 <ul>
-    <li>{% trans "If you create an encrypted library in the web app, the password is sent to the server. The server use this password to create the library. But it doesn't store the plain text password." %}</li>
+    <li>{% trans "If you create an encrypted library in the web app, the password is sent to the server. The server uses this password to create the library. But it doesn't store the plain text password." %}</li>
     <li>{% blocktrans %}If you create an encrypted library from a local folder with the desktop client (see <a href="{{SITE_ROOT}}help/install_sync/">file syncing</a>), the password is not sent to the server.{% endblocktrans %}</li>
 </ul>
 </p>
@@ -17,9 +17,10 @@
 <p>{% trans "When you access the encrypted library:" %}
 <ul>
     <li>{% trans "If you use web app, you have to input the password to the server. The server will cache the password in encrypted format for 1 hour. It won't store the password on disk." %}</li>
-    <li>{% trans "If you use desktop client to sync the library, the password is not sent to the server. The client decrypt and encrypt file contents locally. The plain text password is not stored on the client disk too." %}</li>
+    <li>{% trans "If you use desktop client to sync the library, the password is not sent to the server. The client decrypts and encrypts file contents locally. The plain text password is not stored on the client disk either." %}</li>
+    <li>{% trans "iOS client supports client side encryption since version 2.1.6. Android client supports it since version 2.1.0." %}</li>
 </ul>
 </p>
 
-<p>{% trans "Note that encrypted library only encrypt the contents of the files, but not the folder and file names." %}</p>
+<p>{% trans "Note that encrypted library only encrypts the contents of the files, but not the folder and file names." %}</p>
 {% endblock %}
