--- a/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
+++ b/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
@@ -48,9 +48,9 @@
 <p>{% blocktrans %}You can manually choose which folders or files to be cached locally. If you find a folder consumes too much space, just choose to "Free up space" on that folder and all cached files in that folder will be cleaned. There is no need to set cache cleaning time and cache size limit as in SeaDrive 1.0. Because placeholders are just normal files created on your local disk, your cache size is only limited by the available disk space on your computer.{% endblocktrans %}</p>
 
 <p><b>{% trans "How to remove left-over SeaDrive shortcuts in Windows Explorer?" %}</b></p>
-<p>{% blocktrans %}The "SeaDrive" shortcut in Windows Explorer won't disappear after you exit SeaDrive progrme or switch Seafile accounts in SeaDrive. This is an intended behavior. You don't need to remove them if you still need to access the account later.{% endblocktrans %}</p>
+<p>{% blocktrans %}The "SeaDrive" shortcut in Windows Explorer won't disappear after you exit SeaDrive program or switch Seafile accounts in SeaDrive. This is an intended behavior. You don't need to remove them if you still need to access the account later.{% endblocktrans %}</p>
 <p>{% blocktrans %}In some corner cases, the "SeaDrvie" shortcut will be left-over in Windows Explorer and you want to remove it.{% endblocktrans %}</p>
-<p>{% blocktrans %}You can usually remove those shortcuts by uninstalling SeaDrive program and choose "Remove account information" in the promt dialog.{% endblocktrans %}</p>
+<p>{% blocktrans %}You can usually remove those shortcuts by uninstalling SeaDrive program and choose "Remove account information" in the prompt dialog.{% endblocktrans %}</p>
 <p>{% blocktrans %}If uninstallation doesn't remove the shortcuts successfully, you can remove the SeaDrive shortcut in Windows Explorer by editing the registry. Open the path "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Desktop\NameSpace\" in registry editor. Remove the sub-keys correspond to the shortcut you want to remove.{% endblocktrans %}</p>
 
 {% endblock %}
