org admin update name/logo

--- a/seahub/organizations/templates/organizations/org_admin_react.html
+++ b/seahub/organizations/templates/organizations/org_admin_react.html
@@ -13,7 +13,9 @@
          orgName: '{{ org.org_name|escapejs }}',
          groupID: '{{ group_id }}',
          invitationLink: '{{ invitation_link|escapejs }}',
-         orgMemberQuotaEnabled: '{{ org_member_quota_enabled }}'
+         orgMemberQuotaEnabled: '{{ org_member_quota_enabled }}',
+         orgEnableAdminCustomLogo: '{{ org_enable_admin_custom_logo }}',
+         orgEnableAdminCustomName: '{{ org_enable_admin_custom_name }}'
        }
       }
     </script>
