--- a/seahub/templates/markdown_file_view_react.html
+++ b/seahub/templates/markdown_file_view_react.html
@@ -49,6 +49,7 @@
 		  shareLinkForceUsePassword: {% if share_link_force_use_password %} true {% else %} false {% endif %},
                   shareLinkPasswordMinLength: {{ share_link_password_min_length }},
                   shareLinkPasswordStrengthLevel: {{ share_link_password_strength_level }},
+                  shareLinkForceExpiration: {% if share_link_force_expiration %} true {% else %} false {% endif %},
                   shareLinkExpireDaysDefault: {{ share_link_expire_days_default }},
                   shareLinkExpireDaysMin: {{ share_link_expire_days_min }},
                   shareLinkExpireDaysMax: {{ share_link_expire_days_max }},
