--- a/seahub/templates/react_app.html
+++ b/seahub/templates/react_app.html
@@ -11,9 +11,11 @@
 <script type="text/javascript">
   var newOptions = {
     enableShareToDepartment: {% if enable_share_to_department %} true {% else %} false {% endif %},
+    shareLinkForceExpiration: {% if share_link_force_expiration %} true {% else %} false {% endif %},
     shareLinkExpireDaysDefault: {{ share_link_expire_days_default }},
     shareLinkExpireDaysMin: {{ share_link_expire_days_min }},
     shareLinkExpireDaysMax: {{ share_link_expire_days_max }},
+    uploadLinkForceExpiration: {% if upload_link_force_expiration %} true {% else %} false {% endif %},
     uploadLinkExpireDaysDefault: {{ upload_link_expire_days_default }},
     uploadLinkExpireDaysMin: {{ upload_link_expire_days_min }},
     uploadLinkExpireDaysMax: {{ upload_link_expire_days_max }}
