--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -66,7 +66,7 @@
              }
           }
          </script>
-         <script src="{{ MEDIA_URL }}seafile-editor/main.js"></script>
+         <script src="{{ MEDIA_URL }}seafile-editor/main.js?version=0.4.3"></script>
          <script src="{{ STATIC_URL }}scripts/i18n/{{ LANGUAGE_CODE }}/djangojs.js?v={{ seafile_version }}"></script>
     </body>
 </html>
