--- a/seahub/organizations/templates/organizations/org_admin_react.html
+++ b/seahub/organizations/templates/organizations/org_admin_react.html
@@ -15,7 +15,8 @@
          invitationLink: '{{ invitation_link|escapejs }}',
          orgMemberQuotaEnabled: '{{ org_member_quota_enabled }}',
          orgEnableAdminCustomLogo: '{{ org_enable_admin_custom_logo }}',
-         orgEnableAdminCustomName: '{{ org_enable_admin_custom_name }}'
+         orgEnableAdminCustomName: '{{ org_enable_admin_custom_name }}',
+         enableMultiADFS: '{{ enable_multi_adfs }}',
        }
       }
     </script>
