--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -37,6 +37,8 @@
                   repoName: '{{ repo.name|escapejs }}',
                   filePath: '{{ path|escapejs }}',
                   fileName: '{{ filename|escapejs }}',
+                  fileUuid: '{{ file_uuid }}',
+                  accessToken: '{{ access_token }}',
                   domain: '{{ domain }}',
                   protocol: '{{ protocol }}',
                   lang: '{{ language_code }}',
