rename move seadoc

--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -38,7 +38,8 @@
                   filePath: '{{ path|escapejs }}',
                   fileName: '{{ filename|escapejs }}',
                   fileUuid: '{{ file_uuid }}',
-                  accessToken: '{{ access_token }}',
+                  seadocAccessToken: '{{ seadoc_access_token }}',
+                  seadocServerUrl: '{{ seadoc_server_url }}',
                   domain: '{{ domain }}',
                   protocol: '{{ protocol }}',
                   lang: '{{ language_code }}',
