--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -37,6 +37,9 @@
                   repoName: '{{ repo.name|escapejs }}',
                   filePath: '{{ path|escapejs }}',
                   fileName: '{{ filename|escapejs }}',
+                  fileUuid: '{{ file_uuid }}',
+                  seadocAccessToken: '{{ seadoc_access_token }}',
+                  seadocServerUrl: '{{ seadoc_server_url }}',
                   domain: '{{ domain }}',
                   protocol: '{{ protocol }}',
                   lang: '{{ language_code }}',
