[sdoc file view] fixup

--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -4,6 +4,7 @@
 
 {% block extra_style %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-editor-font/seafile-editor-font.css" />
+{% render_bundle 'viewFileSdoc' 'css' %}
 {% endblock %}
 
 {% block extra_data %}
