--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -47,6 +47,7 @@
     font-family: 'seafile-font2';
     speak: none;
     font-weight: normal;
+    font-style: normal;
     font-variant: normal;
     text-transform: none;
     -webkit-font-smoothing: antialiased;
