--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -124,6 +124,7 @@
             canInvitePeople: {% if enable_guest_invitation and user.permissions.can_invite_guest %} true {% else %} false {% endif %},
             customNavItems: {% if custom_nav_items %} JSON.parse('{{ custom_nav_items | escapejs }}') {% else %} {{'[]'}} {% endif %},
             enableShowContactEmailWhenSearchUser: {% if enable_show_contact_email_when_search_user %} true {% else %} false {% endif %},
+            enableDoubleCheckWhenDeleteDirent: {% if enable_double_check_when_delete_dirent %} true {% else %} false {% endif %},
             {% if max_upload_file_size > 0 %}
             maxUploadFileSize: {{ max_upload_file_size }},
             {% endif %}
