update sdoc fonticon

--- a/media/sdoc-editor/sdoc-editor-font.css
+++ b/media/sdoc-editor/sdoc-editor-font.css
@@ -16,6 +16,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cancel:before {
+  content: "\e641";
+}
+
+.icon-table-of-content:before {
+  content: "\e642";
+}
 
 .icon-history:before {
   content: "\e640";
