update two factor auth remember me UI

--- a/seahub/two_factor/templates/two_factor/core/login.html
+++ b/seahub/two_factor/templates/two_factor/core/login.html
@@ -22,10 +22,12 @@
         <label for="token">{% trans "Authentication token" %}</label>
         <input id="token" type="text" name="{{form_prefix}}otp_token" value="" class="input two-factor-auth-login-token-input" autocomplete="off" autofocus="autofocus" />
 
+	{% if remember_days > 0 %}
         <label class="checkbox-label remember">
             <input type="checkbox" name="{{form_prefix}}remember_me" class="vam remember-input" />
             <span class="vam">{% blocktrans %}Remember this computer for {{remember_days}} days{% endblocktrans %}</span>
         </label>
+        {% endif %}
         
         {% if form.errors %}
         <p class="error">{% trans "Incorrect code" %}</p>
