--- a/frontend/src/css/file-view.css
+++ b/frontend/src/css/file-view.css
@@ -15,8 +15,7 @@ body {
   line-height: 1.5;
   margin-bottom: 0;
 }
-.file-star,
-.file-internal-link {
+.file-star {
   font-size: .875rem;
   color: #999; 
   margin-left: .5rem;
