--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -11,6 +11,7 @@
 docPath: '{{ path|escapejs }}',
 docName: '{{ filename|escapejs }}',
 docUuid: '{{ file_uuid }}',
+assetsUrl: '{{ assets_url }}',
 seadocAccessToken: '{{ seadoc_access_token }}',
 seadocServerUrl: '{{ seadoc_server_url }}',
 {% endblock %}
