--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -142,7 +142,8 @@
             additionalAppBottomLinks: {% if additional_app_bottom_links %} {{ additional_app_bottom_links|safe }} {% else %} null {% endif %},
             additionalAboutDialogLinks: {% if additional_about_dialog_links %} {{ additional_about_dialog_links|safe }} {% else %} null {% endif %},
             enableOnlyoffice: {% if enableOnlyoffice %} true {% else %} false {% endif %},
-            onlyofficeConverterExtensions: {% if onlyofficeConverterExtensions %} {{onlyofficeConverterExtensions|safe}} {% else %} null {% endif %}
+            onlyofficeConverterExtensions: {% if onlyofficeConverterExtensions %} {{onlyofficeConverterExtensions|safe}} {% else %} null {% endif %},
+            enableSeadoc: {% if enable_seadoc %} true {% else %} false {% endif %},
         }
      };
 </script>
