--- a/frontend/src/css/sdoc-file-history.css
+++ b/frontend/src/css/sdoc-file-history.css
@@ -6,7 +6,7 @@
 .sdoc-file-history .sdoc-file-history-header {
   height: 50px;
   border-bottom: 1px solid #e5e5e5;
-  background-color: #f4f4f7;
+  background-color: #fff;
 }
 
 .sdoc-file-history .sdoc-file-history-header .sdoc-file-history-header-left {
@@ -38,14 +38,24 @@
 .sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-last,
 .sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-next {
   padding:  0 8px;
+  height: 100%;
+}
+
+.sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-last .fas,
+.sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-next .fas {
   color: #000;
   opacity: .5;
-  height: 100%;
 }
 
 .sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-last:hover,
 .sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-next:hover {
   cursor: pointer;
+  opacity: .75;
+  background-color: #F5F5F5;
+}
+
+.sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-last:hover .fas,
+.sdoc-file-history .sdoc-file-history-header .sdoc-file-changes-next:hover .fas {
   opacity: .75;
 }
 
@@ -53,7 +63,7 @@
   flex: 1;
   min-height: 0;
   padding: 20px 40px;
-  background-color: #fafaf9;
+  background-color: #F5F5F5;
   overflow-y: scroll;
 }
 
@@ -85,7 +95,7 @@
   padding: 10px 18px;
   height: 50px;;
   border-bottom: 1px solid #e5e5e5;
-  background-color: rgb(250, 250, 249);
+  background-color: #fff;
 }
 
 .sdoc-file-history .sdoc-file-history-panel .sdoc-file-history-select-range-title {
@@ -136,9 +146,29 @@
   border-bottom: none;
 }
 
-.sdoc-file-history-versions .history-list-item:hover {
-  background-color: #ffe7d5;
+.sdoc-file-history-versions .history-list-item:not(.item-active):hover {
+  background-color: #F5F5F5;
   cursor: pointer;
+}
+
+.sdoc-file-history-versions .history-list-item .history-operation:hover {
+  cursor: pointer;
+}
+
+.sdoc-file-history-versions .history-list-item .history-operation a.fas  {
+  color: #888;
+}
+
+.sdoc-file-history-versions .history-list-item .history-operation:hover a.fas  {
+  color: #333;
+}
+
+.sdoc-file-history-versions .history-list-item.item-active {
+  background-color: #FFECD9 !important;
+}
+
+.sdoc-file-history-versions .history-list-item.item-active .history-info .time  {
+  color: #ff8000;
 }
 
 .history-info .owner {
@@ -147,11 +177,6 @@
 
 .sdoc-file-history-versions .dropdown-menu {
   min-width: 8rem;
-}
-
-.sdoc-file-history-versions .dropdown-menu a {
-  text-decoration: none;
-  color: #6e7687;
 }
 
 .history-content .main-panel {
