--- a/media/sdoc-editor/sdoc-editor-font.css
+++ b/media/sdoc-editor/sdoc-editor-font.css
@@ -1,258 +1,158 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 4026169 */
-  src: url('sdoc-editor-font/iconfont.eot?t=1681896574533'); /* IE9 */
-  src: url('sdoc-editor-font/iconfont.eot?t=1681896574533#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('sdoc-editor-font/iconfont.woff2?t=1681896574533') format('woff2'),
-       url('sdoc-editor-font/iconfont.woff?t=1681896574533') format('woff'),
-       url('sdoc-editor-font/iconfont.ttf?t=1681896574533') format('truetype'),
-       url('sdoc-editor-font/iconfont.svg?t=1681896574533#iconfont') format('svg');
+  font-family: "sdocfont"; /* Project id 4097705 */
+  src: url('./sdoc-editor-font/iconfont.eot?t=1685591242626'); /* IE9 */
+  src: url('./sdoc-editor-font/iconfont.eot?t=1685591242626#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./sdoc-editor-font/iconfont.woff2?t=1685591242626') format('woff2'),
+       url('./sdoc-editor-font/iconfont.woff?t=1685591242626') format('woff'),
+       url('./sdoc-editor-font/iconfont.ttf?t=1685591242626') format('truetype'),
+       url('./sdoc-editor-font/iconfont.svg?t=1685591242626#sdocfont') format('svg');
 }
 
-.iconfont {
-  font-family: "iconfont" !important;
+.sdocfont {
+  font-family: "sdocfont" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-edit2:before {
-  content: "\e645";
-}
-
-.icon-revoke:before {
-  content: "\e643";
-}
-
-.icon-redo:before {
-  content: "\e644";
-}
-
-.icon-cancel:before {
-  content: "\e641";
-}
-
-.icon-table-of-content:before {
-  content: "\e642";
-}
-
-.icon-history:before {
-  content: "\e640";
-}
-
-.icon-share:before {
-  content: "\e60f";
-}
-
-.icon-menu:before {
-  content: "\e63f";
-}
-
-.icon-row:before {
-  content: "\e60a";
-}
-
-.icon-angle-double-left:before {
-  content: "\e60b";
-}
-
-.icon-bell:before {
-  content: "\e60c";
-}
-
-.icon-align-right:before {
-  content: "\e60d";
-}
-
-.icon-caret-up:before {
-  content: "\e60e";
-}
-
-.icon-angle-double-right:before {
-  content: "\e610";
-}
-
-.icon-close:before {
-  content: "\e611";
-}
-
-.icon-comment:before {
-  content: "\e612";
-}
-
-.icon-code:before {
-  content: "\e613";
-}
-
-.icon-drop-down:before {
-  content: "\e614";
-}
-
-.icon-delete:before {
-  content: "\e615";
-}
-
-.icon-italic:before {
-  content: "\e616";
-}
-
-.icon-file:before {
-  content: "\e617";
-}
-
-.icon-eye:before {
-  content: "\e618";
-}
-
-.icon-check-square:before {
-  content: "\e619";
-}
-
-.icon-code-block:before {
-  content: "\e61a";
-}
-
-.icon-center-horizontally:before {
-  content: "\e61b";
-}
-
-.icon-exclamation-circle:before {
-  content: "\e61c";
-}
-
-.icon-edit:before {
-  content: "\e61d";
-}
-
-.icon-bold:before {
-  content: "\e61e";
-}
-
-.icon-link:before {
-  content: "\e61f";
-}
-
-.icon-right:before {
-  content: "\e620";
-}
-
-.icon-delete-table:before {
-  content: "\e621";
-}
-
-.icon-plus-circle:before {
-  content: "\e622";
-}
-
-.icon-clear-format:before {
-  content: "\e623";
-}
-
-.icon-enlarge:before {
-  content: "\e624";
-}
-
-.icon-times-circle:before {
-  content: "\e625";
-}
-
-.icon-list-ul:before {
-  content: "\e626";
-}
-
-.icon-info-circle:before {
-  content: "\e627";
-}
-
-.icon-row2:before {
-  content: "\e628";
-}
-
-.icon-fullscreen:before {
-  content: "\e629";
-}
-
-.icon-quote-left:before {
-  content: "\e62a";
-}
-
-.icon-left:before {
-  content: "\e62b";
-}
-
-.icon-pencil:before {
-  content: "\e62c";
-}
-
-.icon-exclamation-triangle:before {
-  content: "\e62d";
-}
-
-.icon-plus-square:before {
-  content: "\e62e";
-}
-
-.icon-users:before {
-  content: "\e62f";
-}
-
-.icon-star1:before {
-  content: "\e630";
-}
-
-.icon-ellipsis-v:before {
-  content: "\e631";
-}
-
-.icon-magic:before {
-  content: "\e632";
-}
-
-.icon-list-ol:before {
-  content: "\e633";
-}
-
-.icon-star2:before {
-  content: "\e634";
-}
-
-.icon-eye-slash:before {
-  content: "\e635";
-}
-
-.icon-use-help:before {
-  content: "\e636";
-}
-
-.icon-column:before {
+.sdoc-delete-table:before {
   content: "\e637";
 }
 
-.icon-formula:before {
-  content: "\e638";
+.sdoc-caret-up:before {
+  content: "\e636";
 }
 
-.icon-user:before {
-  content: "\e639";
+.sdoc-left-alignment:before {
+  content: "\e62e";
 }
 
-.icon-table:before {
-  content: "\e63a";
+.sdoc-center-horizontally:before {
+  content: "\e62f";
 }
 
-.icon-image:before {
-  content: "\e63b";
+.sdoc-align-right:before {
+  content: "\e630";
 }
 
-.icon-left-alignment:before {
-  content: "\e63c";
+.sdoc-cancel:before {
+  content: "\e631";
 }
 
-.icon-shrink:before {
-  content: "\e63d";
+.sdoc-drop-down:before {
+  content: "\e632";
 }
 
-.icon-check-circle:before {
-  content: "\e63e";
+.sdoc-row:before {
+  content: "\e633";
+}
+
+.sdoc-column:before {
+  content: "\e634";
+}
+
+.sdoc-fullscreen:before {
+  content: "\e635";
+}
+
+.sdoc-check-circle:before {
+  content: "\e62a";
+}
+
+.sdoc-description:before {
+  content: "\e62b";
+}
+
+.sdoc-exclamation-triangle:before {
+  content: "\e62c";
+}
+
+.sdoc-exclamation-circle:before {
+  content: "\e62d";
+}
+
+.sdoc-check-square:before {
+  content: "\e615";
+}
+
+.sdoc-image:before {
+  content: "\e616";
+}
+
+.sdoc-italic:before {
+  content: "\e617";
+}
+
+.sdoc-history:before {
+  content: "\e618";
+}
+
+.sdoc-quote-left:before {
+  content: "\e619";
+}
+
+.sdoc-list-ol:before {
+  content: "\e61a";
+}
+
+.sdoc-delete:before {
+  content: "\e61b";
+}
+
+.sdoc-menu:before {
+  content: "\e61c";
+}
+
+.sdoc-code-block:before {
+  content: "\e61d";
+}
+
+.sdoc-redo:before {
+  content: "\e61e";
+}
+
+.sdoc-bold:before {
+  content: "\e61f";
+}
+
+.sdoc-rename:before {
+  content: "\e620";
+}
+
+.sdoc-list-ul:before {
+  content: "\e621";
+}
+
+.sdoc-share:before {
+  content: "\e622";
+}
+
+.sdoc-strikethrough:before {
+  content: "\e623";
+}
+
+.sdoc-link:before {
+  content: "\e624";
+}
+
+.sdoc-underline:before {
+  content: "\e625";
+}
+
+.sdoc-revoke:before {
+  content: "\e626";
+}
+
+.sdoc-table:before {
+  content: "\e627";
+}
+
+.sdoc-table-of-content:before {
+  content: "\e628";
+}
+
+.sdoc-user:before {
+  content: "\e629";
 }
 
