[media/sdoc-editor] updated the content(icons, i18n/l10n)

--- a/media/sdoc-editor/sdoc-editor-font.css
+++ b/media/sdoc-editor/sdoc-editor-font.css
@@ -16,6 +16,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.sdoc-unlink:before {
+  content: "\e63a";
+}
+
 .sdoc-delete-table:before {
   content: "\e637";
 }
