update jquery version

--- a/seahub/templates/base.html
+++ b/seahub/templates/base.html
@@ -99,7 +99,7 @@ var app = {
     }
 }
 </script>
-<script type="text/javascript" src="{% static "scripts/lib/jquery.min.js" %}" id="jquery"></script>{# 'id="jquery"' is for pdf file view with pdf2html #}
+<script type="text/javascript" src="{% static "scripts/lib/jquery-3.7.0.min.js" %}" id="jquery"></script>{# 'id="jquery"' is for pdf file view with pdf2html #}
 <script type="text/javascript" src="{% static "scripts/lib/jquery.simplemodal.js" %}"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/jq.min.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/base.js?t=1536127546642"></script>
